APPS-5094 Consistent variable naming